--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="content">
-            <h1>Commercial Plumbing in North East Georgia.</h1>
+            <h1>Plumbing in North East Georgia.</h1>
             <p>Family owned company since 2017. Unbeatable service at an affordable price!</p>
             <a href="aboutus.html" class="btn"><i class="fas fa-chevron"></i>About Us</a>
         </div>
